文章圖片送出

--- a/html/articlePost.html
+++ b/html/articlePost.html
@@ -26,14 +26,14 @@
         <section class="articlePostContent marginAuto">
             <section class="articleEdit">
                 <h3>編輯你的文章</h3>
-                <form action="homePage.html" name="page1" method="post" enctype="multipart/form-data">
+                <form action="php/articlePost.php" name="page1" method="post" enctype="multipart/form-data">
                     <label for="articleTitle">
                         <h4>主標題</h4>
-                        <input maxlength="11" placeholder="輸入你的標題" type="text" name="title" id="articleTitle" required @input="descInput" v-model="title" ><span class="leftText lightColor small">剩餘字數：{{remnant}}/11</span>
+                        <input maxlength="11" placeholder="輸入你的標題" type="text" name="articleTitle" id="articleTitle" required @input="descInput" v-model="title" ><span class="leftText lightColor small">剩餘字數：{{remnant}}/11</span>
                     </label>
                     <label  for="articleArea">
                         <h4>內容</h4>
-                        <textarea  placeholder="輸入你的內容" id="articleArea" name="content" v-model="content" required></textarea>
+                        <textarea  placeholder="輸入你的內容" id="articleArea" name="articleContent" v-model="content" required></textarea>
                     </label>
                     <h4>附圖(請選擇一張圖片)</h4>
                     <!-- 選到圖片的容器 -->
@@ -44,10 +44,10 @@
                                 <img src="assets/image/upload_image_icon.png" alt="">
                         </div>
                     </label>
-                    <input type="file" id="articlePic" accept="image/png, image/jpeg" name="pic" @change="pic($event)" required>
+                    <input type="file" id="articlePic" accept="image/png, image/jpeg" name="articlePic" @change="pic($event)" required>
                     <div class="buttonList">
                         <input class="squareOutline" type="button" value="取消" @click="resetArticle">
-                        <input class="square" type="button" value="刊登" @click="insertArticle">
+                        <input class="square" type="submit" value="刊登" @click="insertArticle">
                     </div>
                 </form>
             </section>
@@ -92,7 +92,9 @@
                             url: 'php/articlePost.php',
                             data: {
                                 MemNo:JSON.stringify(`${thisVue.memData.memNo}`),
-                                ArticleContent:JSON.stringify(`'未檢舉','無須檢舉',0,'${thisVue.articlePic}','${thisVue.title}','${thisVue.content}','是'`),
+                                // ArticleContent:JSON.stringify(`
+                                // '未檢舉','無須檢舉',0,'${thisVue.articlePic}','${thisVue.title}','${thisVue.content}','是'
+                                // `),
                             },
                             success: function(data) {
                                 // console.log(data);
@@ -103,7 +105,7 @@
                             }
                         });
                         alert('新增成功');
-                        window.location='articleALL.html';
+                        // window.location='articleALL.html';
                     }
                 },
                 resetArticle(){
