--- a/html/gallery02.html
+++ b/html/gallery02.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="galllery02.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
     <title>藝廊2</title>
+
+     <!-- 登入  -->
+     <script src="js/loginCheck.js"></script>
+     <script >
+         window.addEventListener('load',function(){
+             loginCheck(false);
+         })
+     </script>
+     <!-- 登入ＥＮＤ  -->
+
+
 </head>
 <body>
     <div id="stats"></div>
@@ -15,7 +26,7 @@
     <script type="module" src="gallery02.js"></script>
     <script src="../js/OBJLoader.js"></script>
     <script src="../js/threex.domevents.js"></script>
-
+    @@include('layout/header.html',{ "headerClass":"SurroundViewHeader" })
     <section class="lightBox displayNone" id="lightBoxP3">
         <i class="closeLightBox fas fa-times" id="closeLightBoxP3">x</i>
         <!-- 圖片ease-in-out-->
