listing page review gallery effect revise

--- a/html/listing.html
+++ b/html/listing.html
@@ -43,6 +43,7 @@
 
     <!-- 拍賣流程步驟 -->
     <section id="listingVue">
+        
         <section class="safeFrame">
             <div class="listingSteps">
                 <h2>上架競拍 - <b>馬上開啟您的個人拍賣會</b></h2>
@@ -83,7 +84,7 @@
                                 <i><img src="assets/image/listingImage/write_info_icon.png" alt=""></i>
                             </div>
                             <div class="info">
-                                <div class="main">步驟三: 填入商品資訊</div>
+                                <div class="main"><b>步驟三:</b> 填入商品資訊</div>
                             </div>
                         </div>
                     </div>
@@ -109,7 +110,7 @@
                                 <i><img src="assets/image/listingImage/audit_icon.png" alt=""></i>
                             </div>
                             <div class="info">
-                                <div class="main">步驟五: 等待審核上架</div>
+                                <div class="main"><b>步驟五:</b> 等待審核上架</div>
                             </div>
                         </div>
                     </div>
@@ -122,7 +123,7 @@
                                 <i><img src="assets/image/listingImage/auction_icon.png" alt=""></i>
                             </div>
                             <div class="info">
-                                <div class="main">步驟六: 商品競拍開始</div>
+                                <div class="main"><b>步驟六:</b> 商品競拍開始</div>
                             </div>
                         </div>
                     </div>
@@ -317,17 +318,17 @@
                             </li>
                             <li>
                                 <input type="file" id="pic1" name="pic[]" accept=".png,.jpg">
-                                <label for="pic1"><img id="imgAdd"src="assets/image/listingImage/add_icon.png" alt="none"></label>
+                                <label for="pic1" id="pic1-preview"><img id="imgAdd"src="assets/image/listingImage/add_icon.png" alt="none"></label>
                                 <!-- <label for="pic1"><img id="" :src="changeImg" alt="none"></label> -->
                             </li>
                             <li>
                                 <input type="file" id="pic2" name="pic[]" accept=".png,.jpg">
-                                <label for="pic2"><img id="imgAdd1" src="assets/image/listingImage/add_icon.png" alt="none"></label>
+                                <label for="pic2" id="pic2-preview"><img id="imgAdd1" src="assets/image/listingImage/add_icon.png" alt="none"></label>
                                 <!-- <label for="pic1"><img id="" :src="changeImg" alt="none"></label> -->
                             </li>
                             <li>
                                 <input type="file" id="pic3" name="pic[]" accept=".png,.jpg">
-                                <label for="pic3"><img src="assets/image/listingImage/add_icon.png" alt="none"></label>
+                                <label for="pic3" id="pic3-preview"><img src="assets/image/listingImage/add_icon.png" alt="none"></label>
                                 <!-- <label for="pic1"><img id="" :src="changeImg" alt="none"></label> -->
                             </li>
                             <!--
