--- a/galleryAll/gallery/gallery02.html
+++ b/galleryAll/gallery/gallery02.html
@@ -21,7 +21,7 @@
         <!-- 圖片ease-in-out-->
         <div class="photoBox">
             <div class="ease">
-                <img src="https://picsum.photos/500/300/?random=10">
+                <img src="../../assets\image\commodity\commodity_15.jpg">
             </div>
         </div>
         <div class="lightBoxContent">
@@ -38,12 +38,12 @@
             <div class="wrap">
                 <button id="cubeBtn" class="round">點我</button>     <!--方塊收起按鈕-->
                 <div class="cube">
-                    <div class="top"><img src="../../assets/image/listingImage/mona_lisa_ps.png" alt=""></div>
+                    <div class="top"><img src="../../../../assets/image/commodity/commodity_1.jpeg" alt=""></div>
                     <div>
-                        <span style="--i:0"><img src="../../assets/image/listingImage/mona_lisa_ps.png" alt=""></span>
-                        <span style="--i:1"><img src="../../assets/image/listingImage/mona_lisa_ps.png" alt=""></span>
-                        <span style="--i:2"><img src="../../assets/image/listingImage/mona_lisa_ps.png" alt=""></span>
-                        <span style="--i:3"><img src="../../assets/image/listingImage/mona_lisa_ps.png" alt=""></span>
+                        <span style="--i:0"><img src="../../assets/image/commodity/commodity_1.jpeg" alt=""></span>
+                        <span style="--i:1"><img src="../../assets/image/commodity/commodity_1.jpeg" alt=""></span>
+                        <span style="--i:2"><img src="../../assets/image/commodity/commodity_1.jpeg" alt=""></span>
+                        <span style="--i:3"><img src="../../assets/image/commodity/commodity_1.jpeg" alt=""></span>
                     </div>
                 </div>
             </div>
@@ -58,11 +58,12 @@
     <section class="lightBox displayNone" id="lightBoxP5">
         <i class="closeLightBox fas fa-times" id="closeLightBoxP5">x</i>
         <div class="photoBox">
+            <!-- flipClick -->
             <div class="card">
                 <div class="card_inner">
                     <div class="card_face card_face--front">
                         <!-- <h2>Card Front</h2> -->
-                        <img src="../../assets/image/listingImage/listing_bg_picture1.png" alt="none">
+                        <img src="../../assets/image/commodity/commodity_20_2.jpeg" alt="none">
                     </div>
                     <div class="card_face card_face--back">
                         <!-- <div class="card__content">
@@ -160,7 +161,7 @@
 </body>
 </html>
 <!-- 圖片ease-in-out-->
-<link rel="stylesheet" href="ease.css">
+<link rel="stylesheet" href="easeGallery02.css">
 
 <!-- 方塊旋轉 -->
 <link rel="stylesheet" href="cubeGallery02.css">
